# homework_sem2

task1/: CMakeLists.txt  task1.cpp
task10/: CMakeLists.txt  Person.cpp  Person.hpp  RecordBook.cpp  RecordBook.hpp  Student.cpp  Student.hpp  main.cpp
task11/: CMakeLists.txt  FileManager.cpp  FileManager.hpp  Group.cpp  Group.hpp  RecordBook.cpp  RecordBook.hpp  Student.cpp  Student.hpp  Teacher.cpp  Teacher.hpp  main.cpp
task2/: CMakeLists.txt  task2.cpp
task3/: CMakeLists.txt  task3.cpp
task4/: CMakeLists.txt  task4.cpp
task5/: CMakeLists.txt  task5.cpp
task6/: CMakeLists.txt  task6.cpp
task7/: CMakeLists.txt  task7.cpp
task8/: CMakeLists.txt  task8.cpp
task9/: CMakeLists.txt  task9.cpp
